adding temp image

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
-          <div><img src="images/county.png" alt="County Kids Club"></div>
+          <div><img src="images/ckc_temp_image.png" alt="County Kids Club"></div>
           <div>
             <h1 class="hero-heading">
               Strong, happy kids<br>
