adding more content

--- a/index.html
+++ b/index.html
@@ -740,8 +740,9 @@
               <span>in constant motion.</span>
             </h1>
             <p class="hero-text">
-              County Kids Club is a fitness and movement program in Prince Edward County where kids jump,
-              run, climb, and play their way to confidence and lifelong healthy habits.
+              County Kids Club is a fitness and movement program in Prince Edward County where kids jump, run, climb, and play their way to confidence and lifelong healthy habits.
+</p><br><p class="hero-text">Each class blends fun, energy, and skill-building—helping kids discover the joy of movement while developing coordination, strength, and self-belief.
+
             </p>
             <div class="hero-cta-group">
               
