--- a/launch.html
+++ b/launch.html
@@ -358,6 +358,12 @@
       font-size: 0.92rem;
     }
 
+    .schedule-title {
+      font-size: 1.2rem;
+      font-weight: 700;
+      margin-bottom: 0.9rem;
+    }
+
     .schedule-row {
       display: flex;
       justify-content: space-between;
@@ -572,7 +578,7 @@
 
     .contact-grid {
       display: grid;
-      grid-template-columns: 0.9fr 1.1fr;
+      /*grid-template-columns: 0.9fr 1.1fr;*/
       gap: 2.4rem;
       align-items: center;
     }
@@ -702,6 +708,10 @@
       line-height: 1.55;
     }
 
+    .faq-list-bullets {
+      margin-left: 20px;
+    }
+
 
 
     @media (max-width: 900px) {
@@ -740,8 +750,9 @@
               <span>in constant motion.</span>
             </h1>
             <p class="hero-text">
-              County Kids Club is a fitness and movement program in Prince Edward County where kids jump,
-              run, climb, and play their way to confidence and lifelong healthy habits.
+              County Kids Club is a fitness and movement program in Prince Edward County where kids jump, run, climb, and play their way to confidence and lifelong healthy habits.
+</p><br><p class="hero-text">Each class blends fun, energy, and skill-building—helping kids discover the joy of movement while developing coordination, strength, and self-belief.
+
             </p>
             <div class="hero-cta-group">
               <a href="https://forms.gle/BP7AMJMSYez9hjDb8" target="_blank">
@@ -766,21 +777,21 @@
         <div class="about-grid">
           <div>
 
-            <h2 class="section-title">About the program</h2>
+            <h2 class="section-title">What to Expect</h2>
             <p class="about-text">
-              County Kids Club mixes playful games with kid-friendly strength and coordination
-              work. Every class is designed so kids feel successful, supported, and energized.
+              Each week, kids explore playful games, mini challenges, and imaginative movement circuits that build balance, strength, and coordination — all disguised as fun!
             </p>
             <br>
             <p class="about-text">
-              We focus on fundamental movement skills—running, jumping, crawling, throwing—and
-              pair them with fun circuits, obstacle courses, and teamwork challenges. No prior
-              sports experience needed; just a willingness to move and have fun.
+              We focus on the basics — running, jumping, crawling, throwing — and mix them into obstacle courses, team games, and creative movement adventures.
+ No sports experience needed — just a smile and a willingness to move!
             </p>
           </div>
 
           <div>
             <div class="schedule-card">
+              <h3 class="schedule-title">Program details</h3>
+              
               <div class="schedule-row">
                 <div class="schedule-label">Ages</div>
                 <div>3-4 &amp; 5–6 (separate groups)</div>
@@ -869,7 +880,7 @@
           <div class="coaches-text">
             <h2 class="section-title">Meet the team</h2>
             <p>
-              County Kids Club is run by a group of volunteers that are passionate about kids development. 
+              County Kids Club is run by local volunteers who love seeing kids thrive. We’re parents, coaches, and movement enthusiasts dedicated to helping every child feel confident, capable, and excited to move.
             </p>
 
             <div class="coach-roster">
@@ -877,28 +888,28 @@
                 <div class="coach-avatar">J</div>
                 <div class="coach-name">Jessica Dos Santos</div>
                 <div class="coach-bio">
-                  Playful leader with 8+ years coaching kids; turns simple movements into imaginative games.
+                  TBD
                 </div>
               </div>
               <div class="coach-profile">
                 <div class="coach-avatar">L</div>
                 <div class="coach-name">Lara Hilmi</div>
                 <div class="coach-bio">
-                  Early childhood educator who keeps warm-ups calm and cool-downs encouraging for every kid.
+                  Lara has a lifelong connection to sport and physical activity that fuels her passion for helping children discover the joy and benefits of movement. Lara believes deeply in the power of sport as a way to build confidence, leadership skills and lasting friendships. When not chasing after her 3 young boys, she can be found running and cycling along the Millenium Trail. 
                 </div>
               </div>
               <div class="coach-profile">
                 <div class="coach-avatar">M</div>
                 <div class="coach-name">Michael Da Silva</div>
                 <div class="coach-bio">
-                  Obstacle-course enthusiast focused on balance, coordination, and celebrating small wins.
+                  A lifelong fitness enthusiast who loves inspiring kids to move, grow, and push their limits in a fun, supportive way. A former die-hard skateboarder turned cyclist, runner, soccer, and volleyball player. Mike is passionate about longevity, healthy living, and building strong, connected communities. You can find him also volunteering at the local Repair Cafés and Kids of Steel events.
                 </div>
               </div>
               <div class="coach-profile">
                 <div class="coach-avatar">R</div>
                 <div class="coach-name">Robert Spagnola</div>
                 <div class="coach-bio">
-                  Teamwork champ who loves cheering kids on and building confidence through partner drills.
+                  TBD
                 </div>
               </div>
             </div>
@@ -923,7 +934,7 @@
                   Where is this located?
                 </div>
                 <div class="faq-answer">
-                  County Kids Club is located in Pictin, Prince Edward County, Canada. The program will run in one of the gyms at PECI.
+                  County Kids Club is held in <b>Picton, Prince Edward County, Canada</b>. Classes take place in one of the gyms at <b>Prince Edward Collegiate Institute (PECI)</b> — 41 Barker Street, Picton, ON.
                   </div>  
               </div>
               <div class="faq-item">
@@ -931,7 +942,7 @@
                   How many kids will be in the program?
                 </div>
                 <div class="faq-answer">
-                  The program is intended for kids aged 3-4 and 5-6 years old with each group having a maximum of 12 kids.
+                  We’re keeping groups small — <b>a maximum of 24 kids total (12 per group: ages 3–4 and 5–6)</b> — so every child gets plenty of attention, encouragement, and room to move and play.
                   </div>  
               </div>
               <div class="faq-item">
@@ -939,7 +950,13 @@
                   What is the age range?
                 </div>
                 <div class="faq-answer">
-                  The program is intended for kids aged 3-4 and 5-6 years old with each group having a maximum of 12 kids.
+                  The program is open to children <b>ages 3–6</b>, split into two groups:
+
+<ul class="faq-list-bullets">
+  <li>3–4 years</li>
+  <li>5–6 years</li>
+</ul>
+<p>This helps us tailor activities to each age group’s energy, coordination, and confidence level.</p>
                   </div>  
               </div>
               <div class="faq-item">
@@ -947,7 +964,7 @@
                   What is the cost?
                 </div>
                 <div class="faq-answer">
-                  The cost is $30 per child / 6-week session.
+                  <b>It’s $30 per child</b> for a <b>6-week session</b> — an affordable way to get kids moving, learning, and having fun every week!
                   </div>
               </div>
               <div class="faq-item">
@@ -955,7 +972,8 @@
                   What is the schedule?
                 </div>
                 <div class="faq-answer">
-                  Saturdays at 9:30-10:30 AM
+                  Classes run on Saturdays from 9:30–10:30 AM.
+Our Winter Session begins January 17, 2026 and ends on Feb 21 
                   </div>
               </div>
               
@@ -964,7 +982,7 @@
                   Do I drop my child off or do I stay with them?
                 </div>
                 <div class="faq-answer">
-                  answer
+                  Parents are asked to stay for the duration of the class, but we encourage you to sit back, relax, and watch your child in action. Our instructors will lead the group and keep everyone engaged — you just get to enjoy seeing your little one move, play, and grow in confidence!
                   </div>
               </div>
             </div>
