more content changes

--- a/index.html
+++ b/index.html
@@ -736,8 +736,8 @@
           <div><img src="images/ckc_temp_image.png" alt="County Kids Club"></div>
           <div>
             <h1 class="hero-heading">
-              Strong, happy kids<br>
-              <span>in constant motion.</span>
+              A movement club for kids<br>
+              <span>powered by fun and community.</span>
             </h1>
             <p class="hero-text">
               County Kids Club is a fitness and movement program in Prince Edward County where kids jump, run, climb, and play their way to confidence and lifelong healthy habits.
