--- a/launch.html
+++ b/launch.html
@@ -889,7 +889,7 @@
             <div class="coach-roster">
               <div class="coach-profile">
                 <div class="coach-avatar">J</div>
-                <div class="coach-name">Jessica Dos Santos</div>
+                <div class="coach-name">Jessica Santos</div>
                 <div class="coach-bio">
                   Sports and movement have always brought me joy, connection, and confidence. As a mom to an active almost-3-year-old, I noticed there were few places for young kids to explore movement in a fun, supportive way. Our community deserves more opportunities like this, and I’m excited to help create them.
                 </div>
