--- a/launch.html
+++ b/launch.html
@@ -563,14 +563,16 @@
       height: 90px;
       margin: 0 auto 0.8rem;
       border-radius: 50%;
-      background: linear-gradient(135deg, var(--bg-pink), var(--bg-cyan));
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 700;
-      color: #ffffff;
-      font-size: 1.6rem;
+      /*background: linear-gradient(135deg, var(--bg-pink), var(--bg-cyan));*/
       box-shadow: 0 12px 30px rgba(0, 0, 0, 0.18);
+    }
+
+    .coach-avatar img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+      display: block;
     }
 
     .coach-name {
@@ -913,28 +915,36 @@
 
           <div class="coach-roster">
             <div class="coach-profile">
-              <div class="coach-avatar">J</div>
+              <div class="coach-avatar">
+                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+              </div>
               <div class="coach-name">Jessica Santos</div>
               <div class="coach-bio">
                 Sports and movement have always brought me joy, connection, and confidence. As a mom to an active almost-3-year-old, I noticed there were few places for young kids to explore movement in a fun, supportive way. Our community deserves more opportunities like this, and I’m excited to help create them.
               </div>
             </div>
             <div class="coach-profile">
-              <div class="coach-avatar">L</div>
+              <div class="coach-avatar">
+                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+              </div>
               <div class="coach-name">Lara Hilmi</div>
               <div class="coach-bio">
                 Lara has a lifelong connection to sport and physical activity that fuels her passion for helping children discover the joy and benefits of movement. Lara believes deeply in the power of sport as a way to build confidence, leadership skills and lasting friendships. When not chasing after her 3 young boys, she can be found running and cycling along the Millenium Trail. 
               </div>
             </div>
             <div class="coach-profile">
-              <div class="coach-avatar">M</div>
+              <div class="coach-avatar">
+                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+              </div>
               <div class="coach-name">Michael Da Silva</div>
               <div class="coach-bio">
                 A lifelong fitness enthusiast who loves inspiring kids to move, grow, and push their limits in a fun, supportive way. A former die-hard skateboarder turned cyclist, runner, soccer, and volleyball player. Mike is passionate about longevity, healthy living, and building strong, connected communities. You can find him also volunteering at the local Repair Cafés and Kids of Steel events.
               </div>
             </div>
             <div class="coach-profile">
-              <div class="coach-avatar">R</div>
+              <div class="coach-avatar">
+                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+              </div>
               <div class="coach-name">Robert Spagnola</div>
               <div class="coach-bio">
                 TBD
