changing coaches stack

--- a/launch.html
+++ b/launch.html
@@ -596,6 +596,13 @@
       }
     }
 
+    @media (max-width: 600px) {
+      .coach-roster {
+        grid-template-columns: 1fr;
+        gap: 1.2rem;
+      }
+    }
+
     /* CONTACT / MAP */
 
     .section-contact {
