minor style changes

--- a/launch.html
+++ b/launch.html
@@ -519,7 +519,7 @@
 
     .section-coaches {
       background: linear-gradient(90deg, var(--bg-blue) 100%, #ffffff 45%);
-      color: #ffffff;
+      color: #F5F5F5;
       padding-bottom: 20;
     }
 
@@ -536,7 +536,7 @@
     }
 
     .coaches-title .section-title {
-      color: #ffffff;
+      color: #F5F5F5;
     }
 
     .coaches-title p {
@@ -555,7 +555,7 @@
 
     .coach-profile {
       text-align: center;
-      color: #ffffff;
+      color: #F5F5F5;
     }
 
     .coach-avatar {
@@ -759,7 +759,7 @@
       padding: 1.5rem 3.2rem 2rem;
       font-size: 0.8rem;
       color: var(--text-muted);
-      background: #ffffff;
+      background: var(--bg-light);
     }
 
     @media (max-width: 900px) {
