--- a/launch.html
+++ b/launch.html
@@ -945,7 +945,7 @@
               </div>
               <div class="coach-name">Michael Da Silva</div>
               <div class="coach-bio">
-                A lifelong fitness enthusiast who loves inspiring kids to move, grow, and push their limits in a fun, supportive way. A former die-hard skateboarder turned cyclist, runner, soccer, and volleyball player. Mike is passionate about longevity, healthy living, and building strong, connected communities. You can find him also volunteering at the local Repair Cafés and Kids of Steel events.
+                A lifelong fitness enthusiast who loves seeing kids move, grow, and push their limits in a fun, supportive way. A former die-hard skateboarder turned cyclist, runner, soccer, and volleyball player. Mike is passionate about longevity, healthy living, and building strong, connected communities. You can find him volunteering at the local Repair Cafés and Kids of Steel events or around town trying to keep up with his active toddler.
               </div>
             </div>
             <div class="coach-profile">
@@ -954,7 +954,7 @@
               </div>
               <div class="coach-name">Robert Spagnola</div>
               <div class="coach-bio">
-                TBD
+                Sport and physical activity have always been central to Rob’s life. As a former athlete, youth sports coach, and now Personal Trainer and owner of The Gym in the Armoury, he brings both expertise and enthusiasm to every group he leads. When he’s not coaching or training, Rob is busy chasing his three-year-old around town, getting in even more steps than he planned.
               </div>
             </div>
           </div>
