--- a/launch.html
+++ b/launch.html
@@ -1029,7 +1029,14 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                   No equipment or special clothing is needed. Just something comfortable to move around in and a clean pair of indoor shoes.
                 </div>
               </div>
-              
+              <div class="faq-item">
+                <div class="faq-question">
+                  Does my child need to be at a certain fitness level?
+                </div>
+                <div class="faq-answer">
+                  No minimum fitness level is required—while the activities are designed to be challenging, they’re purposely structured so kids feel engaged and empowered to participate in a fun, friendly, and supportive environment.
+                </div>
+              </div>
               <div class="faq-item">
                 <div class="faq-question">
                   Do I drop my child off or do I stay with them?
@@ -1040,7 +1047,7 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
               </div>
               <div class="faq-item">
                 <div class="faq-question">
-                  What if I have a question?
+                  What if I have a question not covered here?
                 </div>
                 <div class="faq-answer">
                   You can email us at <a href="mailto:countykidsclub@gmail.com">countykidsclub@gmail.com</a> and we’ll get back to you as soon as possible!
