--- a/launch.html
+++ b/launch.html
@@ -778,7 +778,8 @@
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
-          <div><img src="images/ckc_temp_image.png" alt="County Kids Club"></div>
+          <div><center><img src="images/County kids club.png" alt="County Kids Club">
+          <img src="images/County.png" alt="County Kids Club"></center></div>
           <div>
             <h1 class="hero-heading">
               A movement club for kids<br>
@@ -884,15 +885,15 @@
             <div class="feature-icon icon-pink">🏃‍♀️</div>
             <h3>High-energy movement games</h3>
             <p>
-              Think relay races, tag variations, and partner challenges that keep kids moving, laughing, and learning coordination without even realizing it.
+              Think relay races, tag variations, and partner challenges that keep kids moving, laughing, and fully involved, all while learning without even realizing it.
             </p>
           </div>
 
           <div class="feature-item">
             <div class="feature-icon icon-blue">🧱</div>
-            <h3>Strength &amp; coordination</h3>
+            <h3>Balance &amp; coordination</h3>
             <p>
-              We crawl, climb, balance, and stretch through obstacle courses and fun fitness stations that build strong bodies and confident movers.
+              We crawl, climb, balance, and stretch through activities and fun fitness stations that build strong bodies and confident movers.
             </p>
           </div>
 
@@ -900,7 +901,7 @@
             <div class="feature-icon icon-green">💬</div>
             <h3>Teamwork &amp; confidence</h3>
             <p>
-              From group circuits to end-of-class huddles, kids learn to listen, cheer for others, and feel proud of what their bodies can do.
+              From group circuits to class huddles, kids learn to listen, participate on their own and with others, cheer for their teammates, and feel proud of what their bodies can do.
             </p>
           </div>
         </div>
@@ -941,7 +942,7 @@
             </div>
             <div class="coach-profile">
               <div class="coach-avatar">
-                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+                <img src="images/mike-profile.jpg" alt="Mike">
               </div>
               <div class="coach-name">Michael Da Silva</div>
               <div class="coach-bio">
@@ -1043,6 +1044,14 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                 </div>
                 <div class="faq-answer">
                   Parents are asked to <b>stay for the duration of the class</b>, but we encourage you to sit back, relax, and watch your child in action. Our instructors will lead the group and keep everyone engaged — you just get to enjoy seeing your little one move, play, and grow in confidence!
+                  </div>
+              </div>
+              <div class="faq-item">
+                <div class="faq-question">
+                  What’s the format of a typical session?
+                </div>
+                <div class="faq-answer">
+                  Each session starts with a quick team huddle where we set simple goals and get everyone ready to go. After a warm-up, kids move through 3-5 fun and purposeful activities, each lasting about 8-12 minutes. We take water breaks and gather for mini huddles between activities to keep everyone refreshed, focused, and connected.
                   </div>
               </div>
               <div class="faq-item">
