--- a/launch.html
+++ b/launch.html
@@ -778,7 +778,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
-          <div><center><img src="images/County kids club.png" alt="County Kids Club">
+          <div><center><img src="images/ckc-colored-logo.png" alt="County Kids Club">
           <img src="images/County.png" alt="County Kids Club"></center></div>
           <div>
             <h1 class="hero-heading">
