updating profiles and colors

--- a/launch.html
+++ b/launch.html
@@ -10,7 +10,7 @@
     :root {
       --bg-cream: #fff9e6;
       --bg-lime: #c9ff4f;
-      --bg-blue: #008cff;
+      --bg-blue: #41aacd;
       --bg-cyan: #00d0ff;
       --bg-pink: #ff4fd8;
       --bg-light: #f8fafc;
@@ -18,7 +18,7 @@
       --text-muted: #4b5563;
       --accent-yellow: #ffd93b;
       --accent-green: #2ecc71;
-      --accent-red: #ff5a5f;
+      --accent-red: #ef5741;
       --accent-blue: #4a7dff;
       --radius-lg: 24px;
       --shadow-soft: 0 18px 40px rgba(15, 23, 42, 0.18);
@@ -162,7 +162,7 @@
     }
 
     .hero-heading span {
-      color: var(--accent-blue);
+      color: var(--accent-red);
     }
 
     .hero-text {
@@ -356,7 +356,7 @@
     }
 
     .schedule-card {
-      background: var(--bg-lime);
+      background: var(--bg-blue);
       border-radius: var(--radius-lg);
       padding: 1.4rem 1.6rem;
       /*box-shadow: var(--shadow-soft);*/
@@ -946,16 +946,16 @@
               </div>
               <div class="coach-name">Michael Da Silva</div>
               <div class="coach-bio">
-                A lifelong fitness enthusiast who loves seeing kids move, grow, and push their limits in a fun, supportive way. A former die-hard skateboarder turned cyclist, runner, soccer, and volleyball player. Mike is passionate about longevity, healthy living, and building strong, connected communities. You can find him volunteering at the local Repair Cafés and Kids of Steel events or around town trying to keep up with his active toddler.
+                A lifelong fitness enthusiast who loves seeing kids move, grow, and push their limits. A former die-hard skateboarder turned cyclist, runner, soccer, and volleyball player. Mike is passionate about longevity, healthy living, and building strong, connected communities. You can find him volunteering at the local Repair Cafés and <a href="https://www.countykidsofsteel.ca/" target="_blank">Kids of Steel</a> events or around town trying to keep up with his active toddler.
               </div>
             </div>
             <div class="coach-profile">
               <div class="coach-avatar">
-                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+                <img src="images/rob-profile.jpeg" alt="Rob">
               </div>
               <div class="coach-name">Robert Spagnola</div>
               <div class="coach-bio">
-                Sport and physical activity have always been central to Rob’s life. As a former athlete, youth sports coach, and now Personal Trainer and owner of The Gym in the Armoury, he brings both expertise and enthusiasm to every group he leads. When he’s not coaching or training, Rob is busy chasing his three-year-old around town, getting in even more steps than he planned.
+                Sport and physical activity have always been central to Rob’s life. As a former athlete, youth sports coach, and now Personal Trainer and owner of <a href="https://www.thegyminthearmoury.ca/" target="_blank">The Gym in the Armoury</a>, he brings both expertise and enthusiasm to every group he leads. When he’s not coaching or training, Rob is busy chasing his three-year-old around town, getting in even more steps than he planned.
               </div>
             </div>
           </div>
@@ -1052,6 +1052,22 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                 </div>
                 <div class="faq-answer">
                   Each session starts with a quick team huddle where we set simple goals and get everyone ready to go. After a warm-up, kids move through 3-5 fun and purposeful activities, each lasting about 8-12 minutes. We take water breaks and gather for mini huddles between activities to keep everyone refreshed, focused, and connected.
+                  </div>
+              </div>
+              <div class="faq-item">
+                <div class="faq-question">
+                  Are any snacks provided?
+                </div>
+                <div class="faq-answer">
+                  We’ll provide a healthy snack for the kids after each class, but please make sure your child brings a water bottle to stay hydrated. If they need something extra, feel free to have a small snack ready for before or after class.  
+                  </div>
+              </div>
+              <div class="faq-item">
+                <div class="faq-question">
+                  What is the adult-to-child ratio?
+                </div>
+                <div class="faq-answer">
+                  The program will be supported by 4–5 adult volunteers each week, ensuring a safe, supportive, and well-supervised environment for all participants.
                   </div>
               </div>
               <div class="faq-item">
