--- a/launch.html
+++ b/launch.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QDE4BYGYEN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QDE4BYGYEN');
+</script>
+
   <meta charset="UTF-8" />
   <title>County Kids Club – Kids Fitness Program</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
