--- a/launch.html
+++ b/launch.html
@@ -935,7 +935,7 @@
           <div class="coach-roster">
             <div class="coach-profile">
               <div class="coach-avatar">
-                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+                <img src="images/jess-profile.jpeg" alt="Jess">
               </div>
               <div class="coach-name">Jessica Santos</div>
               <div class="coach-bio">
