--- a/launch.html
+++ b/launch.html
@@ -13,7 +13,7 @@
 </script>
 
   <meta charset="UTF-8" />
-  <title>County Kids Club – Kids Fitness Program</title>
+  <title>County Kids Club – Kids Movement Program in Prince Edward County</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -944,7 +944,7 @@
             </div>
             <div class="coach-profile">
               <div class="coach-avatar">
-                <img src="images/143-1435868_headshot-silhouette-person-placeholder.png" alt="Coach portrait placeholder">
+                <img src="images/lara-profile.jpeg" alt="Lara">
               </div>
               <div class="coach-name">Lara Hilmi</div>
               <div class="coach-bio">
