--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
-          <div><center><img src="images/ckc-colored-logo.png" alt="County Kids Club">
+          <div><center><img src="images/county-kids-club-logo2.png" alt="County Kids Club">
           <img src="images/County.png" alt="County Kids Club"></center></div>
           <div>
             <h1 class="hero-heading">
@@ -841,7 +841,7 @@
             
             <div class="schedule-row">
               <div class="schedule-label">Ages</div>
-              <div>3-6 <br>Note: for some activities groups will be split out (3-4 & 5-6)</div>
+              <div>3-6 <br>Note: for some activities, groups might be split out (3-4 & 5-6)</div>
             </div>
             <div class="schedule-row">
               <div class="schedule-label">Schedule</div>
@@ -863,7 +863,7 @@
             <div class="schedule-row">
               <div class="schedule-label">Cost</div>
               <div>
-                $30 per child / 6-week session<br>
+                $45 per child / 6-week session<br>
                 
               </div>
             </div>
@@ -1006,7 +1006,7 @@
                   What is the age range?
                 </div>
                 <div class="faq-answer">
-                  The program is open to children <b>ages 3–6</b>, split into two groups:
+                  The program is open to children <b>ages 3–6</b>. Some activities might require the kids to be split into two groups:
 
 <ul class="faq-list-bullets">
   <li>3–4 years</li>
@@ -1021,7 +1021,7 @@
                   What is the cost?
                 </div>
                 <div class="faq-answer">
-                  <b>It’s $30 per child</b> for a <b>6-week session</b> — an affordable way to get kids moving, learning, and having fun every week!
+                  <b>It’s $45 per child</b> for a <b>6-week session</b> — an affordable way to get kids moving, learning, and having fun every week!
                   </div>
               </div>
               <div class="faq-item">
@@ -1078,7 +1078,7 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                   What is the adult-to-child ratio?
                 </div>
                 <div class="faq-answer">
-                  The program will be supported by 4–5 adult volunteers each week, ensuring a safe, supportive, and well-supervised environment for all participants.
+                  The program will be supported by 3–5 adult volunteers each week, ensuring a safe, supportive, and well-supervised environment for all participants.
                   </div>
               </div>
               <div class="faq-item">
