--- a/index.html
+++ b/index.html
@@ -853,10 +853,11 @@
             <div class="schedule-row">
               <div class="schedule-label">Location</div>
               <div>
-                <a href="https://maps.app.goo.gl/65hrq1qq69AC6shc7" target="_blank">Prince Edward Collegiate Institute (PECI)</a><br>
+                <a href="https://maps.app.goo.gl/65hrq1qq69AC6shc7" target="_blank">Prince Edward Collegiate Institute (PECI)<br>
+                GYM A<br>
                 41 Barker Street<br>
                 Picton, ON<br>
-                K0K 2T0<br>
+                K0K 2T0</a><br>
                 
               </div>
             </div>
@@ -990,7 +991,7 @@
                   Where is this located?
                 </div>
                 <div class="faq-answer">
-                  County Kids Club is held in <b>Picton, Prince Edward County, Canada</b>. Classes take place in one of the gyms at <b>Prince Edward Collegiate Institute (PECI)</b> — 41 Barker Street, Picton, ON.
+                  County Kids Club is held in <b>Picton, Prince Edward County, Canada</b>. Classes take place in GYM A at <a href="https://maps.app.goo.gl/65hrq1qq69AC6shc7" target="_blank"><b>Prince Edward Collegiate Institute (PECI)</b> — 41 Barker Street, Picton, ON.</a>
                   </div>  
               </div>
               <div class="faq-item">
