--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 
   <meta charset="UTF-8" />
   <title>County Kids Club – Kids Movement Program in Prince Edward County</title>
+  <meta name="description" content="County Kids Club is a fun, confidence-building movement program for kids in Prince Edward County—featuring games, obstacle courses, and teamwork.">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="County Kids Club – Kids Movement Program in Prince Edward County">
+  <meta property="og:description" content="Kids jump, run, climb, and play their way to confidence with games, obstacle courses, and teamwork in PEC.">
+  <meta property="og:image" content="images/county-kids-club-logo2.png">
+  <meta property="og:url" content="https://countykidsclub.com">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="County Kids Club – Kids Movement Program in Prince Edward County">
+  <meta name="twitter:description" content="A playful, supportive movement program for kids—building coordination, strength, and confidence in PEC.">
+  <meta name="twitter:image" content="images/county-kids-club-logo2.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
