adding faq item and meta image

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="County Kids Club – Kids Movement Program in Prince Edward County">
   <meta property="og:description" content="Kids jump, run, climb, and play their way to confidence with games, obstacle courses, and teamwork in PEC.">
-  <meta property="og:image" content="/images/county-kids-club-logo2.png">
+  <meta property="og:image" content="/images/county-kids-club-logo-multi.png">
   <meta property="og:url" content="https://countykidsclub.com">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="County Kids Club – Kids Movement Program in Prince Edward County">
   <meta name="twitter:description" content="A playful, supportive movement program for kids—building coordination, strength, and confidence in PEC.">
-  <meta name="twitter:image" content="/images/county-kids-club-logo2.png">
+  <meta name="twitter:image" content="/images/county-kids-club-logo-multi.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -1092,6 +1092,14 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                 <div class="faq-answer">
                   The program will be supported by 3–5 adult volunteers each week, ensuring a safe, supportive, and well-supervised environment for all participants.
                   </div>
+              </div>
+              <div class="faq-item">
+                <div class="faq-question">
+                  How do I make a payment for the program?
+                </div>
+                <div class="faq-answer">
+                  You'll first need to <b><a href="https://forms.gle/BP7AMJMSYez9hjDb8" target="_blank">register</a> </b>for the program and then we'll email you with a confirmation and next steps for making your payment through an e-Transfer.
+                </div>
               </div>
               <div class="faq-item">
                 <div class="faq-question">
