--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
             <div class="schedule-row">
               <div class="schedule-label">Note</div>
               <div>
-                A parent or guardian is required to stay. See our <a href="#faq">FAQ</a> for more information.
+                A parent or guardian is required to stay for the duration of each class. See our <a href="#faq">FAQ</a> for more information.
                 
               </div>
             </div>
@@ -1073,7 +1073,7 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                   Do I drop my child off or do I stay with them?
                 </div>
                 <div class="faq-answer">
-                  Parents are asked to <b>stay for the duration of the class</b>, but we encourage you to sit back, relax, and watch your child in action. Our instructors will lead the group and keep everyone engaged — you just get to enjoy seeing your little one move, play, and grow in confidence!
+                  A parent or guardian is required to <b>stay for the duration of each class</b>, but we encourage you to sit back, relax, and watch your child in action. Our instructors will lead the group and keep everyone engaged — you just get to enjoy seeing your little one move, play, and grow in confidence!
                   </div>
               </div>
               <div class="faq-item">
