updating with waitlist

--- a/index.html
+++ b/index.html
@@ -812,10 +812,13 @@
 </p><br><p class="hero-text">Each class blends fun, energy, and skill-building—helping kids discover the joy of movement while developing coordination, strength, and self-belief.
 
             </p>
+            <br><p class="hero-text">All spots for County Kids Club are currently filled — but you can still join the waitlist!
+We’ll let you know if a space opens up or if a new session is added.
+</p>
             <div class="hero-cta-group">
-              <a href="https://forms.gle/BP7AMJMSYez9hjDb8" target="_blank">
+              <a href="https://forms.gle/kJrAhTuWxogALkiJ6" target="_blank">
                 <button class="btn-primary">
-                  Register <span>→</span>
+                  Join the waitlist <span>→</span>
                 </button>
               </a>
               <!--<a href="#about">
@@ -1105,7 +1108,7 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                   How do I make a payment for the program?
                 </div>
                 <div class="faq-answer">
-                  You'll first need to <b><a href="https://forms.gle/BP7AMJMSYez9hjDb8" target="_blank">register</a> </b>for the program and then we'll email you with a confirmation and next steps for making your payment through an e-Transfer.
+                  You'll first need to <b><a href="https://forms.gle/kJrAhTuWxogALkiJ6" target="_blank">join the waitlist</a> </b>for the program and then we'll email you with a confirmation and next steps for making your payment through an e-Transfer.
                 </div>
               </div>
               <div class="faq-item">
