--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
-          <div><center><img src="images/county-kids-club-logo2.png" alt="County Kids Club">
+          <div><center><img src="images/ckc-colored-logo.png" alt="County Kids Club">
           <img src="images/County.png" alt="County Kids Club"></center></div>
           <div>
             <h1 class="hero-heading">
