updating registration link

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
 We’ll let you know if a space opens up or if a new session is added.
 </p>
             <div class="hero-cta-group">
-              <a href="https://forms.gle/kJrAhTuWxogALkiJ6" target="_blank">
+              <a href="https://countykidsclub.youthmodo.com/register?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0" target="_blank">
                 <button class="btn-primary">
                   Join the waitlist <span>→</span>
                 </button>
